deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo 

---

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: fit-d
  namespace: demo
  labels:
    app: fit
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailbale: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: fit

  template:
    metadata:
      labels: 
        app: fit
    spec:
      containers:
      - name: fit-cont
        image: muralisocail123/fitness-app:v1.0.1
        resources:
          requests: 
            memory: "100mi"
            cpu: "100m"
        ports:
        - containerPorts: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower
  namespace: demo
  labels: 
    app: flower-app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailbale: 1
      maxSurge: 1
    selector:
      matchLabels:
        app: flower-app
    template:
      metadata:
        labels: 
          app: flower-app
      spec:
        containers:
        - name: flower-cont
          image: muralisocail123/kyndrl-flower-app:v1.1.0
          resources:
            requests:
              memory: "200mi"
              cpu: "100m"
          ports:
            containerPorts: 3015

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tran
  namespace: demo
  labels:
    app: tran-app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailbale: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: tran-app
  template:
    metadata:
      labels:
        app: tran-app
    spec:
      containers:
      - name: tran-cont
        image: muralisocail123/transcation-app:v1.0.0
        resources:
          requests:
            memory: "200mi"
            cpu: "100m"
        ports:
          containerPorts: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ey
  namespace: demo
  labels:
    app: ey-app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailbale: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: ey-app
  template:
    metadata:
      labels:
        app: ey-app
    spec:
      containers:
      - name: ey-cont
        image: muralisocail123/ey-cart:v1.1.0
        resources:
          requests:
            memory: "200mi"
            cpu: "100m"
        ports:
          containerPorts: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flip
  namespace: demo
  labels: 
    app: flip-app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailbale: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: flip-app
  template:
    metadata:
      labels:
        app: flip-app
    spec:
      containers:
        name: flip-cont
        image: muralisocail123/flip-clone-kuberox:v1.1.0
        resources:
          requests:
            memory: "200mi"
            cpu: "100m"
        ports:
          containerPorts: 80
