node-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: front
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: front
    spec:
      nodeselector:
        env: test
      containers:
        - name: front
          image: bharath44623/medimesh_medimesh-frontend:v1.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
