demo-gw-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-gw-nodeport
  namespace: demo
spec:
  type: NodePort
  selector:
    gateway.networking.k8s.io/gateway-name: demo-gw
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080   # You can choose any free port (30000–32767)
