service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fit-svc
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: fit
  ports:
    - name: http
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flower-svc
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: flower-app
  ports:
    - name: http
      port: 3015
      targetPort: 3015
---
apiVersion: v1
kind: Service
metadata:
  name: tran-svc
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: tran-app
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ey-svc
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: ey-app
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: flip-svc
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: flip-app
  ports:
    - name: http
      port: 80
      targetPort: 80
