route.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fit-route
  namespace: demo
spec:
  parentRefs:
    - name: demo-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /fit
      backendRefs:
        - name: fit-svc
          port: 5000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flower-route
  namespace: demo
spec:
  parentRefs:
    - name: demo-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /flower
      backendRefs:
        - name: flower-svc
          port: 3015
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tran-route
  namespace: demo
spec:
  parentRefs:
    - name: demo-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /tran
      backendRefs:
        - name: tran-svc
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ey-route
  namespace: demo
spec:
  parentRefs:
    - name: demo-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ey
      backendRefs:
        - name: ey-svc
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flip-route
  namespace: demo
spec:
  parentRefs:
    - name: demo-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /flip
      backendRefs:
        - name: flip-svc
          port: 80
